--- a/docs/POSDE_bookdown.tex
+++ b/docs/POSDE_bookdown.tex
@@ -124,7 +124,7 @@
 
 \title{Applied Philosophy of Science and Data Ethics}
 \author{Dr.~Carlos Vega}
-\date{2021: Last compiled: 2021-11-04}
+\date{2021: Last compiled: 2021-11-10}
 
 \begin{document}
 \maketitle
@@ -1552,7 +1552,7 @@ Therefore, we are intentionally choosing or building a model that differs from t
 \item
   \textbf{Phenomenological models.} Phenomenological models have been defined in different, although related, ways. A common definition takes them to be models that only represent observable properties of their targets and refrain from postulating hidden mechanisms and the like.
 \item
-  \textbf{Exploratory models.} Exploratory models are models which are not proposed in the first place to learn something about a specific target system or a particular experimentally established phenomenon.
+  \textbf{Exploratory models.} Exploratory models are models which are not proposed in the first place to learn something about a specific target system or a particular experimentally established phenomenon. Exploratory models function as the starting point of further explorations in which the model is modified and refined.
 \item
   \textbf{Models of data.} A model of data (sometimes also ``data model'') is a corrected, rectified, regimented, and in many instances idealized version of the data we gain from immediate observation, the so-called raw data. Characteristically, one first eliminates errors (e.g., removes points from the record that are due to faulty observation) and then presents the data in a ``neat'' way, for instance by drawing a smooth curve through a set of points. These two steps are commonly referred to as ``data reduction'' and ``curve fitting''.
   --- \citep{sep-models-science}
